update auth domain
